--- a/table-pga.tex
+++ b/table-pga.tex
@@ -2,7 +2,7 @@
 
 \begin{table*}[t]
 \centering
-\caption{Comparison of expected PGA values for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pgaavgs}c. The following codes are used for the references of other studies.
+\caption{Comparison of expected PGA values for selected cities in northern Iran between results obtained in this study and those of others previous studies. In our results, the values of the R and U models correspond to mean PGA values as shown also in Fig.~\ref{fig:pga}, and the (R,U) model values correspond to the combination of the R and U models shown in Fig.~\ref{fig:pga.ru.std}. The following codes are used for the references of other studies.
     Gh03: \citet{Ghodrati2003},
     Gh08: \citet{Ghodrati2008},
     Va11: \citet{Vafaie2011},
